crates/toml_edit/fixtures/invalid/array/tables-1.stderr
TOML parse error at line 4, column 1
  |
4 | [[fruit]] # Not allowed
  | ^
Invalid table header
Duplicate key `fruit` in document root
